<resources>
    <string name="app_name">cardsagainstyourliver</string>
    <string name="invest_profile_text">Profil anlegen</string>
    <string name="create_profile_text">Profil erstellen</string>
    <string name="player_choice_text">Spielerauswahl</string>
    <string name="continue_text">weiter</string>
    <string name="switch_text">wechsel</string>
    <string name="life_text">Leben :</string>
    <string name="your_turn_text">du bist dran!</string>
    <string name="now_player_text">ist jetzt am Zug!</string>
    <string name="player_win_text">hat gewonnen!</string>
    <string name="choice_cards_text">wähle deine Karten!</string>
    <string name="manual_text">Anleitung</string>
    <string name="play_text">Spiele</string>
    <string name="bettler_text" translatable="false">Bettler</string>
    <string name="schwimmen_text" translatable="false">Schwimmen</string>
    <string name="more_games_text">. . .</string>
    <string name="games_comming_soon">weitere Spiele folgen...</string>
    <string name="specialMode_text">Spezialmodus</string>
    <string name="profiles_text">Profile</string>
    <string name="profile_text">Profil</string>
    <string name="settings_text">Einstellungen</string>
    <string name="menu_text">Menü</string>
    <string name="startGame_text">Spielen</string>
    <string name="resume_text">Resume</string>
    <string name="giveUp_text">Aufgeben</string>
    <string name="players_text">Spieler</string>
    <string name="player_01_text">Spieler 1</string>
    <string name="player_02_text">Spieler 2 +</string>
    <string name="youAre...">Du bist . . .</string>
    <string name="test_text">Spielen</string>
    <string name="name_text2">name</string>
    <string name="age_text">Alter</string>
    <string name="size_text">Größe</string>
    <string name="bodyweight_text">Gewicht</string>
    <string name="gender_text">Geschlecht</string>
    <string name="drink_text">Getränk</string>
    <string name="age_hint">Jahre</string>
    <string name="size_hint" translatable="false">cm</string>
    <string name="bodyweight_hint" translatable="false">kg</string>
    <string name="male_text">Weiblich</string>
    <string name="female_text">Männlich</string>
    <string name="drink_01">Bier</string>
    <string name="drink_02">Wein</string>
    <string name="drink_03" translatable="false">Cocktail</string>
    <string name="drink_04" translatable="false">Whiskey</string>
    <string name="drink_05" translatable="false">Vodka</string>
    <string name="drink_06" translatable="false">Gin</string>
    <string name="drink_07" translatable="false">Tequila</string>
    <string name="drink_08" translatable="false">Rum</string>
    <string name="drink_09">Sekt</string>
    <string name="drink_10" translatable="false">Cidre</string>
    <string name="drink_11">Hefeweizen</string>
    <string name="drink_12" translatable="false">Hugo</string>
    <string name="sound_off_text">Ton aus</string>
    <string name="sound_on_text">Ton an</string>
    <string name="placeholder_text">Platzhalter</string>
    <string name="profilName_hint">Profilename eingeben</string>
    <string name="profileName_01_text">Profil_a</string>
    <string name="newProfil_text" translatable="false">Test</string>
    <string name="name_text" translatable="false">Test</string>
    <string name="name_hint" translatable="false">Test</string>
    <string name="gameRules_text_Schwimmen">Regelwerk: Schwimmen</string>
    <string name="rules_Schwimmen">Das Spiel „Schwimmen“ wird mit einem einzigen Paket doppeldeutscher oder französischer Karten mit 32 Blatt, einem so genannten Skatblatt, gespielt. Die Reihenfolge ist im Uhrzeigersinn festgelegt. Wenn ein Spieler an der Reihe ist, versucht er, durch den Tausch von Spielkarten eine bestimmte Kombination auf seiner eigenen Hand zu etablieren. Das Ziel im Spiel ist, am Ende nicht jene Kombination zu haben, die den geringsten Punktewert hat.  Spielziel und Wertung Es gibt aber viele verschiedene Möglichkeiten, eine so genannte Kombination zu bilden. So sammelt man beispielsweise entweder Karten der gleichen Farbe und addiert ihre Punktewerte – so ähnlich wie beim Kartenspiel Einundvierzig – wobei hier gilt:  Das Ass gibt elf Punkte Bube, Dame und König zählen jeweils zehn Punkte Die Zahlenkarten Sieben, Acht, Neun und Zehn zählen so viel wie ihre Augen (also 7, 8,9 und 10 Punkte) Die maximal mögliche Punktzahl ist in diesem Fall die 31, was dann der Fall ist, wenn eine Hand aus einem Ass sowie zwei Bildkarten oder einem Ass und einem Bild sowie einer Zehn in derselben Farbe besteht.  Es bietet sich jedoch auch an, Karten desselben Ranges zu kombinieren. Das bedeutet, dass eine Kombination beispielsweise durch 3 Siebener, drei Damen oder drei Buben vorhanden ist – wobei diese natürlich verschiedene Farben haben. Eine Kombination dieser Art zählt immer 30 und einen halben Punkt.  Einzelne Beispiele für die Punktewertung: Im Folgenden sind einige Beispiele aufgezählt, die die Punktewertung verdeutlichen sollen. So ist es einfacher, sich in das Regelwerk einzuarbeiten – insbesondere wenn man noch nie ein ähnliches Spiel gespielt hat. Hier die Beispiele:  Herz Dame, Herz Zehn, Karo Bube: Wenn ein Spieler diese Karten auf seiner Hand hat, so zählt die entsprechende Kombination 20 Punkte. Die Punktzahl setzt sich aus 2 × 10 Punkten zusammen, da hierbei die Kombination derselben Farbe zählt, und das ist nur bei der Herz Dame und der Herz Zehn der Fall. Kreuz König, Kreuz Neun, Kreuz Ass: Bei dieser Kombination handelt es sich um drei Karten gleicher Farbe. Das Ass zählt 11, der König 10 und die Neun zählt 9 Punkte. Insgesamt ergeben sich für diese Kombination damit 30 Punkte. Herz Sieben, Pik Sieben, Karo Sieben: Diese Kombination beinhaltet drei Karten gleichen Ranges. Deshalb zählt sie 30 ein halb Karten. Wenn mehrere Spieler diese Kombination vorweisen können, also ein so genannter Gleichstand auftritt, zählt das Blatt des Spielers mit dem höchsten Rang. Entsprechend würde eine Folge aus drei Neunern der Folge aus drei Siebenern vorgehen. Karo König, Karo Ass, Karo Zehn: Dies ist eine Kombination, welche 31 Punkte zählt: Das Ass gibt 11 Punkte, der Karo König gibt 10 Punkte, ebenso wie die Karo Zehn.</string>
    <string name="gameManual_text_Schwimmen">Anleitung: Schwimmen</string>
    <string name="manual_Schwimmen">Beim offenen Spiel teilt der Kartengeber je drei Karten verdeckt und einzeln an alle Spielteilnehmer aus; an sich selbst teilt er dabei zwei Päckchen mit jeweils drei Karten ebenfalls verdeckt aus. Der Kartengeber sieht sich daraufhin die Karten eines der beiden Stapel an und muss nun eine Entscheidung fällen. In dieser Entscheidung hat er die Wahl, ob er mit den gesichteten Karten nun spielen möchte oder nicht. Wenn er mit den Karten vom ersten Stapel nicht spielen will, so werden diese drei Karten offen in die Tischmitte gelegt. Der Kartengeber muss nun mit den Karten des zweiten Stapels spielen. Will er jedoch mit den Karten vom ersten Stapel spielen, so wird entsprechend der zweite Stapel offen in die Mitte des Tisches gelegt. Die übrigen Karten werden nun beiseitegelegt. Der Spieler, welcher links vom Kartengeber sitzt, ist dazu berechtigt, das Spiel zu beginnen. Er kann entscheiden, ob er entweder eine oder wiederum alle drei Karten aus seiner Hand mit den Karten in der Mitte tauscht. Zwei Karten zu tauschen ist nicht möglich. Wenn er nicht tauschen möchte, so signalisiert er dies entweder mit seiner Aussage „Ich schiebe!“ oder aber er schließt das Spiel, in dem er klopft. Hierfür genügt ein einfaches Klopfen mit den Knöcheln auf den Tisch. In der Region kann es auch üblich sein, an statt zu klopfen die Aussage „Ich mache zu“ zu äußern.  Ende des Spiels Es gibt zwei verschiedene Wege, das Spiel zu beenden:  Wenn ein Spieler 31 Punkte hält, also einen so genannten „Einunddreißig“, „Schnauz“, „Knack“ oder „Hosn obi“, so legt er die entsprechenden Karten sofort offen und für alle sichtbar auf den Tisch. Das Spiel ist nun augenblicklich vorbei. Rein theoretisch ist es in diesem Sinne möglich, dass das Spiel sofort nachdem die Karten gegeben wurden, enden kann. Wenn ein Spieler sagt „Ich mache zu.“, oder wenn er klopft, so ist es den anderen Spielern erlaubt, noch ein einziges Mal zu tauschen. Danach ist das Spiel beendet. Es ist üblich, dieses Spiel über mehrere Runden hinweg zu spielen. Die Ermittlung des Verlierers gestaltet sich dabei folgendermaßen: Der oder die Spieler gelten als Verlierer, die am Ende von dem Spiel am wenigsten Punkte in Form von Kartenkombinationen vorweisen können.</string>
    <string name="gameRules_text_Bettler">Regeln: Bettler</string>
    <string name="rules_Bettler">Die Regeln variieren stark. Deshalb ist es wichtig, diese zunächst vor Spielbeginn festzulegen. Bis zu sieben Spieler spielen mit einem 32er Standard-Kartenspiel. Für einen längeren Spielspaß ist auch möglich, mit einem Rommee-Blatt oder zwei Standard-Kartenspielen zu spielen.  Zu Beginn werden alle Karten gleichmäßig verdeckt an die Spieler ausgeteilt. Wer die vorher bestimmte Anfangskarte (meist die Karo Sieben) hält, spielt als Erster aus.  Es kann eine einzelne Karte oder aber auch ein Mehrling ausgespielt werden. Als Mehrling werden Karten gleicher Wertigkeit bezeichnet.  Zum Beispiel \t\t\t\t Reihum sind die anderen Spieler am Zug. Sie können passen oder den Stich mit einer höheren Karte übernehmen. Bei Mehrlingen kann der Stich nur mit gleich vielen Karten eines höheren Rangs gemacht werden. Das bedeutet, wenn ein Mehrling von drei Neunen auf dem Tisch liegt, kann der Stich nur mit drei Zehnen, Buben, Damen, Königen oder Assen gemacht werden. Ausnahme können hier die Joker sein. Der Einsatz und Rang von Jokern muss ebenfalls vorher besprochen werden.  Es kann sein, dass es strategisch sinnvoll ist, zu passen, obwohl man den Stich machen könnte. Es besteht also keine Stichpflicht. Der Spieler, der den Stich gemacht hat, kommt als Nächster raus.  Die Spielrunde ist zu Ende, wenn der vorletzte Spieler keine Karte mehr hat. Der letzte Spieler mit Karten auf der Hand ist das Arschloch. Wer als Erster keine einzige Karte mehr auf der Hand hat, wird der König der Runde.  Bei vielen Varianten ändert sich nun die Sitzordnung gemäß der Höhe der gewonnenen Ämter. Das Arschloch ist nun der Geber, denn die neue Runde wird von dem Verlierer begonnen.  In dieser Runde werden Karten „gedrückt“. Das bedeutet, dass Spieler mit niedrigen Ämtern ihre höchsten Karten an Spieler mit höheren Ämtern abgeben müssen. Der König bekommt so die höchsten Karten vom Arschloch im Tausch gegen seine Niedrigsten. Ebenso wird mit den anderen Ämtern verfahren. Vize-Arschloch tauscht mit Vize-König und so weiter. Vorher sollte das unbedingt abgesprochen werden. In den meisten Varianten ist festgelegt, dass das Arschloch keine Asse abgeben muss.  Wird eine bereits gespielte Karte wieder aufgenommen oder in anderer Form gegen die festgelegten Regeln verstoßen, wird dieser Spieler automatisch zum Arschloch. Der letzte Spieler mit Karten auf der Hand ist damit nur Vize-Arschloch. Wird als letzte Karte ein Ass aufgespielt, ist auch dieser Spieler automatisch das Arschloch. Es gilt daher auch bei diesem lustigen Spiel, auf Strategie zu achten.</string>
    <string name="gameManual_text_Bettler">Anleitung: Bettler</string>
    <string name="newGame_text">Neues Spiel</string>
    <string name="promille_text">Promille</string>
    <string name="schwimmen_has_ended">hat beendet!</string>
    <string name="schwimmen_has_closed">hat geschoben!</string>
    <string name="you_have_to_drink">du musst einen Schluck trinken</string>
    <string name="nobody">Keiner</string>
    <string name="pushBettler">Schieben an</string>
    <string name="start">beginnt</string>
    <string name="is_king">ist König!</string>
    <string name="choose_card">Bitte wähle Karten aus!</string>
    <string name="higher_cards">Die gewählten Karten müssen höher sein, siehe Anleitung!</string>
</resources>