<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/mainBackgroundColor"
    android:orientation="vertical"
    tools:context=".PauseMenuActivity">

    <TextView
        android:id="@+id/nameApp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/menuBarColor"
        android:fontFamily="@font/roboto_slab_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/pause" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#99E4E9ED"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/resume_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/roboto_slab_bold"
                android:onClick="onClickResumeButton"
                android:text="@string/resume_text"
                android:textAllCaps="true"
                android:textColor="@color/buttonText"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/giveUp_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/roboto_slab_bold"
                android:onClick="onClickGiveUpButton"
                android:text="@string/giveUp_text"
                android:textAllCaps="true"
                android:textColor="@color/buttonText"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/manual_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/roboto_slab_bold"
                android:onClick="onClickManualButton"
                android:text="@string/manual_text"
                android:textAllCaps="true"
                android:textColor="@color/buttonText"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

        </LinearLayout>

        <Space
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FF0000" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/menuBarColor">

    </LinearLayout>

</LinearLayout>