<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textColor2"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/player_name1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor2"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="Spieler"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/player_win_text"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/player_name2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor2"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="Spieler"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/result_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:text="@string/your_turn_text"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ImageView
            android:id="@+id/test1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/textColor2"
            app:srcCompat="@drawable/pause" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="45dp" />

        <Button
            android:id="@+id/next_round_btn"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@drawable/text_background_round"
            android:fontFamily="@font/roboto_slab_bold"
            android:gravity="center"
            android:onClick="nextRound"
            android:text="@string/continue_text"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>