<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/menuBarColor"
        android:orientation="horizontal">

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            android:onClick="onClickBackToMenuButton"
            app:srcCompat="@drawable/back_button" />


        <Space
            android:layout_width="278dp"
            android:layout_height="40dp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/settings_text"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@color/backgroundColor2"
        android:fontFamily="@font/roboto_slab_bold"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/settings_text"
        android:textAllCaps="true"
        android:textColor="#E4E9ED"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#99E4E9ED"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/sound_off"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/sound_off_text"
                android:textColor="@color/buttonText"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/sound_on"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/text_background_round"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/sound_on_text"
                android:textColor="#E4E9ED"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/placeholder"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/placeholder_text"
                android:textColor="@color/buttonText"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/placeholder"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/placeholder_text"
                android:textColor="@color/buttonText"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/placeholder"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corners"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/placeholder_text"
                android:textColor="@color/buttonText"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

        </LinearLayout>

        <Space
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FF0000" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/menuBarColor">

    </LinearLayout>

</LinearLayout>